bring up statistics endpoint for dashboard
